--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,17 +9,17 @@ server:
 
 spring:
   datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://booklog.chl7p9tqzuib.ap-northeast-2.rds.amazonaws.com:3306/booklog
-    url: jdbc:mariadb://localhost:3307/booklog?serverTimezone=Asia/Seoul
+#    driver-class-name: org.mariadb.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://booklog.chl7p9tqzuib.ap-northeast-2.rds.amazonaws.com:3306/booklog
+#    url: jdbc:mariadb://localhost:3307/booklog?serverTimezone=Asia/Seoul
 
     #jdbc:mysql://booklog-db.c4akum70ou2t.ap-northeast-2.rds.amazonaws.com:3306/booklog_db
-    username: root
-#    username: admin
+#    username: root
+    username: admin
     #admin
-    password: 1234
-#    password: song2me1234
+#    password: 1234
+    password: song2me1234
     #20000118
   main:
     allow-circular-references: true
