--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,9 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/com.auth0/java-jwt
 	implementation group: 'com.auth0', name: 'java-jwt', version: '3.19.0'
+
+	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client'
+
 }
 
 //tasks.named('test') {
