--- a/build.gradle
+++ b/build.gradle
@@ -37,12 +37,12 @@ dependencies {
 	// https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305
 	implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
-//	// swagger 의존성 설정
-//	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
-//	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
-//
-//	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
-//	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	// swagger 의존성 설정
+	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
+	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+
+	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
+	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
 
 	//spring-cloud-starter-aws
 	compileOnly 'org.springframework.cloud:spring-cloud-starter-aws:2.0.2.RELEASE'
