--- a/appspec.yml
+++ b/appspec.yml
@@ -3,20 +3,20 @@ os: linux
 
 files:
   - source: /
-    destination: /home/ec2-user/app # 인스턴스에서 파일이 저장될 위치
+    destination: /home/ubuntu/app # 인스턴스에서 파일이 저장될 위치
 
 permissions:
   - object: /
     pattern: "**"
-    owner: ec2-user
-    group: ec2-user
+    owner: ubuntu
+    group: ubuntu
 
 hooks:
   AfterInstall:
     - location: scripts/stop.sh
       timeout: 60
-      runas: ec2-user
+      runas: ubuntu
   ApplicationStart:
     - location: scripts/start.sh
       timeout: 60
-      runas: ec2-user
+      runas: ubuntu
