--- a/build.gradle
+++ b/build.gradle
@@ -43,23 +43,18 @@ dependencies {
 //
 //	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
 //	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
-//
-//	// swagger : input string "" 에러 수정을 위해 버전 다운그레이드
-//	compile("io.springfox:springfox-swagger2:2.9.2") {
-//		exclude module: 'swagger-annotations'
-//		exclude module: 'swagger-model'
-//	}
-//	compile("io.swagger:swagger-annotations:1.5.21")
-//	compile("io.swagger:swagger-models:1.5.21")
 
-	// 스웨거 의존성 수정
-	implementation("io.springfox:springfox-swagger2:2.9.2") {
-		exclude group: 'io.swagger',module: 'swagger-annotations'
-		exclude group: 'io.swagger',module: 'swagger-models'
-	}
-	implementation "io.swagger:swagger-annotations:1.5.21"
-	implementation "io.swagger:swagger-models:1.5.21"
-	implementation "io.springfox:springfox-swagger-ui:2.9.2"
+//	// 스웨거 의존성 수정
+//	implementation("io.springfox:springfox-swagger2:2.9.2") {
+//		exclude group: 'io.swagger',module: 'swagger-annotations'
+//		exclude group: 'io.swagger',module: 'swagger-models'
+//	}
+//	implementation "io.swagger:swagger-annotations:1.5.21"
+//	implementation "io.swagger:swagger-models:1.5.21"
+//	implementation "io.springfox:springfox-swagger-ui:2.9.2"
+
+	// https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter
+	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
 
 	//spring-cloud-starter-aws
 	compileOnly 'org.springframework.cloud:spring-cloud-starter-aws:2.0.2.RELEASE'
