--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,75 +1,39 @@
-name: deploy
+name: booklog-deploy CD
 
 on:
   push:
     branches:
-      - master
-
-# 리전, 버킷 이름, CodeDeploy 앱 이름, CodeDeploy 배포 그룹 이름
-env:
-  AWS_REGION: ap-northeast-2
-  S3_BUCKET_NAME: mybooklog
-  CODE_DEPLOY_APPLICATION_NAME: booklog-codedeploy-app
-  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: booklog-codedeploy-deployment-group
-
-permissions:
-  contents: read
+      - master # (1).브랜치 이름
+  workflow_dispatch: (2).수동 실행
 
 jobs:
-  deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
-    environment: production
+  build:
+    runs-on: ubuntu-latest # (3).OS환경
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2 # (4).코드 check out
 
       - name: Set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v1.4.3
         with:
-          java-version: 11
+          java-version: 11 # (5).자바 설치
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
-        shell: bash
+        shell: bash # (6).권한 부여
 
       - name: Build with Gradle
         run: ./gradlew clean build
-        shell: bash
+        shell: bash # (7).build 시작
 
-      # yml 파일 생성
-      - name: Create Property
-        run: |
-          cd ./src/main/resources
-          touch ./application.yml
-          echo "${{secrets.PROPERTIES}}" > ./application.yml
-
-      - name: Run chomod to make gradlew executable
-        run: chmod +x ./gradlew
-
-      # AWS 인증 (IAM 사용자 Access Key, Secret Key 활용)
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+      - name: Get current time
+        uses: 1466587594/get-current-time@v2
+        id: current-time
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          format: YYYY-MM-DDTHH-mm-ss
+          utcOffset: "+09:00"작 # (8).build 시점의 시간확보
 
-      # 빌드 결과물을 S3 버킷에 업로드
-      - name: Upload to AWS S3
-        run: |
-          aws deploy push \
-            --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
-            --ignore-hidden-files \
-            --s3-location s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip \
-            --source .
-
-      # S3 버킷에 있는 파일을 대상으로 CodeDeploy 실행
-      - name: Deploy to AWS EC2 from S3
-        run: |
-          aws deploy create-deployment \
-            --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
-            --deployment-config-name CodeDeployDefault.AllAtOnce \
-            --deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }} \
-            --s3-location bucket=$S3_BUCKET_NAME,key=$GITHUB_SHA.zip,bundleType=zip
+      - name: Show Current Time
+        run: echo "CurrentTime=$"
+        shell: bash # (9).확보한 시간 보여주기
