--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ HELP.md
 .gradle
 .gradle/
 build/
+gradlew
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -23,6 +24,7 @@ bin/
 *.iws
 *.iml
 *.ipr
+*.bat
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
