--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master # (1).브랜치 이름
-  workflow_dispatch: (2).수동 실행
+  workflow_dispatch: # (2).수동 실행
 
 jobs:
   build:
