--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,3 +37,24 @@ jobs:
       - name: Show Current Time
         run: echo "CurrentTime=$"
         shell: bash # (9).확보한 시간 보여주기
+
+      - name: Generate deployment package
+          run: |
+            mkdir -p deploy
+            cp build/libs/*.jar deploy/application.jar
+            cp Procfile deploy/Procfile
+            cp -r .ebextensions deploy/.ebextensions
+            cp -r .platform deploy/.platform
+            cd deploy && zip -r deploy.zip .
+
+          - name: Beanstalk Deploy
+            uses: einaregilsson/beanstalk-deploy@v20
+            with:
+              aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
+              aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
+              application_name: booklog
+              environment_name: Booklog-env
+              version_label: github-action-${{steps.current-time.outputs.formattedTime}}
+              region: ap-northeast-2
+              deployment_package: deploy/deploy.zip
+              wait_for_environment_recovery: 180
