--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,3 +58,10 @@ jobs:
           region: ap-northeast-2
           deployment_package: deploy/deploy.zip
           wait_for_environment_recovery: 180
+
+      # application.yml 추가
+      - name: application.yml Add
+        run: |
+          cd ./src/main/resources
+          touch ./application.yml
+          echo "${{secrets.PROPERTIES}}" > ./application.yml
