--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         run: chmod +x ./gradlew
         shell: bash # (6).권한 부여
 
-      # application.yml 추가
+      # application.yml
       - name: application.yml Add
         run: |
           echo "PROPERTIES=$PROPERTIES" >> ./src/main/resources/application.yml
